add join and leave channel and refactor